test/compilable/forward1.d
// REQUIRED_ARGS: -d

// 104

Foofunc f;
typedef int Foo;
alias int function(Foo) Foofunc;
