test/fail_compilation/fail6572.d
// REQUIRED_ARGS: -de

typedef int y;
